policy_parser/PolicyParser.py
# Generated from Policy.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PolicyParser ( Parser ):

    grammarFileName = "Policy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'='", "'If'", "'Then'", "'and'", 
                     "'or'", "'not'", "'true'", "'since'", "'yesterday'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "IF", "THEN", 
                      "AND", "OR", "NOT", "TRUE", "SINCE", "YESTERDAY", 
                      "INTEGER", "REAL_NUMBER", "STRING", "TIME", "HOUR", 
                      "MINUTE", "SECOND", "IDENTIFIER", "RELATIONAL_OP", 
                      "ARITHMATIC_OP", "OPEN_PAREN", "CLOSED_PAREN", "COMMA", 
                      "WHITESPACE", "NEWLINE", "COMMENTS" ]

    RULE_policy = 0
    RULE_statements = 1
    RULE_invariant = 2
    RULE_if_condition = 3
    RULE_predicate = 4
    RULE_predicate_factor = 5
    RULE_then_condition = 6
    RULE_term = 7
    RULE_term_factor = 8
    RULE_function_call = 9
    RULE_terms = 10
    RULE_constant = 11
    RULE_function = 12
    RULE_device = 13
    RULE_device_attribute = 14
    RULE_condition_assigned_variable = 15
    RULE_condition_assignment = 16

    ruleNames =  [ "policy", "statements", "invariant", "if_condition", 
                   "predicate", "predicate_factor", "then_condition", "term", 
                   "term_factor", "function_call", "terms", "constant", 
                   "function", "device", "device_attribute", "condition_assigned_variable", 
                   "condition_assignment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    IF=3
    THEN=4
    AND=5
    OR=6
    NOT=7
    TRUE=8
    SINCE=9
    YESTERDAY=10
    INTEGER=11
    REAL_NUMBER=12
    STRING=13
    TIME=14
    HOUR=15
    MINUTE=16
    SECOND=17
    IDENTIFIER=18
    RELATIONAL_OP=19
    ARITHMATIC_OP=20
    OPEN_PAREN=21
    CLOSED_PAREN=22
    COMMA=23
    WHITESPACE=24
    NEWLINE=25
    COMMENTS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PolicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invariant(self):
            return self.getTypedRuleContext(PolicyParser.InvariantContext,0)


        def EOF(self):
            return self.getToken(PolicyParser.EOF, 0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.StatementsContext)
            else:
                return self.getTypedRuleContext(PolicyParser.StatementsContext,i)


        def getRuleIndex(self):
            return PolicyParser.RULE_policy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy" ):
                listener.enterPolicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy" ):
                listener.exitPolicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy" ):
                return visitor.visitPolicy(self)
            else:
                return visitor.visitChildren(self)




    def policy(self):

        localctx = PolicyParser.PolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 34
                    self.statements() 
                self.state = 39
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 40
            self.invariant()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==18:
                self.state = 41
                self.statements()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(PolicyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invariant(self):
            return self.getTypedRuleContext(PolicyParser.InvariantContext,0)


        def condition_assignment(self):
            return self.getTypedRuleContext(PolicyParser.Condition_assignmentContext,0)


        def getRuleIndex(self):
            return PolicyParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = PolicyParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.invariant()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.condition_assignment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvariantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PolicyParser.IF, 0)

        def if_condition(self):
            return self.getTypedRuleContext(PolicyParser.If_conditionContext,0)


        def THEN(self):
            return self.getToken(PolicyParser.THEN, 0)

        def then_condition(self):
            return self.getTypedRuleContext(PolicyParser.Then_conditionContext,0)


        def getRuleIndex(self):
            return PolicyParser.RULE_invariant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvariant" ):
                listener.enterInvariant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvariant" ):
                listener.exitInvariant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvariant" ):
                return visitor.visitInvariant(self)
            else:
                return visitor.visitChildren(self)




    def invariant(self):

        localctx = PolicyParser.InvariantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_invariant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(PolicyParser.IF)
            self.state = 54
            self.if_condition()
            self.state = 55
            self.match(PolicyParser.THEN)
            self.state = 56
            self.then_condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate(self):
            return self.getTypedRuleContext(PolicyParser.PredicateContext,0)


        def OPEN_PAREN(self):
            return self.getToken(PolicyParser.OPEN_PAREN, 0)

        def CLOSED_PAREN(self):
            return self.getToken(PolicyParser.CLOSED_PAREN, 0)

        def AND(self):
            return self.getToken(PolicyParser.AND, 0)

        def if_condition(self):
            return self.getTypedRuleContext(PolicyParser.If_conditionContext,0)


        def OR(self):
            return self.getToken(PolicyParser.OR, 0)

        def NOT(self):
            return self.getToken(PolicyParser.NOT, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_if_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_condition" ):
                listener.enterIf_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_condition" ):
                listener.exitIf_condition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_condition" ):
                return visitor.visitIf_condition(self)
            else:
                return visitor.visitChildren(self)




    def if_condition(self):

        localctx = PolicyParser.If_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_condition)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 58
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 61
                self.predicate()
                self.state = 63
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 62
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 65
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 68
                self.predicate()
                self.state = 69
                self.match(PolicyParser.AND)
                self.state = 70
                self.if_condition()
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 71
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 74
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 77
                self.predicate()
                self.state = 78
                self.match(PolicyParser.OR)
                self.state = 79
                self.if_condition()
                self.state = 81
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 80
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.match(PolicyParser.NOT)
                self.state = 85
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 84
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 87
                self.if_condition()
                self.state = 89
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 88
                    self.match(PolicyParser.CLOSED_PAREN)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate_factor(self):
            return self.getTypedRuleContext(PolicyParser.Predicate_factorContext,0)


        def OPEN_PAREN(self):
            return self.getToken(PolicyParser.OPEN_PAREN, 0)

        def CLOSED_PAREN(self):
            return self.getToken(PolicyParser.CLOSED_PAREN, 0)

        def AND(self):
            return self.getToken(PolicyParser.AND, 0)

        def predicate(self):
            return self.getTypedRuleContext(PolicyParser.PredicateContext,0)


        def OR(self):
            return self.getToken(PolicyParser.OR, 0)

        def NOT(self):
            return self.getToken(PolicyParser.NOT, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = PolicyParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_predicate)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 93
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 96
                self.predicate_factor()
                self.state = 98
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 97
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 100
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 103
                self.predicate_factor()
                self.state = 104
                self.match(PolicyParser.AND)
                self.state = 105
                self.predicate()
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 106
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.predicate_factor()
                self.state = 110
                self.match(PolicyParser.OR)
                self.state = 111
                self.predicate()
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                if la_ == 1:
                    self.state = 112
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.match(PolicyParser.NOT)
                self.state = 117
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                if la_ == 1:
                    self.state = 116
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 119
                self.predicate()
                self.state = 121
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                if la_ == 1:
                    self.state = 120
                    self.match(PolicyParser.CLOSED_PAREN)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicate_factorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.TermContext)
            else:
                return self.getTypedRuleContext(PolicyParser.TermContext,i)


        def RELATIONAL_OP(self):
            return self.getToken(PolicyParser.RELATIONAL_OP, 0)

        def OPEN_PAREN(self):
            return self.getToken(PolicyParser.OPEN_PAREN, 0)

        def CLOSED_PAREN(self):
            return self.getToken(PolicyParser.CLOSED_PAREN, 0)

        def condition_assigned_variable(self):
            return self.getTypedRuleContext(PolicyParser.Condition_assigned_variableContext,0)


        def TRUE(self):
            return self.getToken(PolicyParser.TRUE, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_predicate_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate_factor" ):
                listener.enterPredicate_factor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate_factor" ):
                listener.exitPredicate_factor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_factor" ):
                return visitor.visitPredicate_factor(self)
            else:
                return visitor.visitChildren(self)




    def predicate_factor(self):

        localctx = PolicyParser.Predicate_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_predicate_factor)
        self._la = 0 # Token type
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 125
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 128
                self.term(0)
                self.state = 129
                self.match(PolicyParser.RELATIONAL_OP)
                self.state = 130
                self.term(0)
                self.state = 132
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                if la_ == 1:
                    self.state = 131
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.condition_assigned_variable()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(PolicyParser.TRUE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Then_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_condition(self):
            return self.getTypedRuleContext(PolicyParser.If_conditionContext,0)


        def OPEN_PAREN(self):
            return self.getToken(PolicyParser.OPEN_PAREN, 0)

        def CLOSED_PAREN(self):
            return self.getToken(PolicyParser.CLOSED_PAREN, 0)

        def SINCE(self):
            return self.getToken(PolicyParser.SINCE, 0)

        def then_condition(self):
            return self.getTypedRuleContext(PolicyParser.Then_conditionContext,0)


        def YESTERDAY(self):
            return self.getToken(PolicyParser.YESTERDAY, 0)

        def NOT(self):
            return self.getToken(PolicyParser.NOT, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_then_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThen_condition" ):
                listener.enterThen_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThen_condition" ):
                listener.exitThen_condition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThen_condition" ):
                return visitor.visitThen_condition(self)
            else:
                return visitor.visitChildren(self)




    def then_condition(self):

        localctx = PolicyParser.Then_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_then_condition)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,29,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
                if la_ == 1:
                    self.state = 138
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 141
                self.if_condition()
                self.state = 143
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
                if la_ == 1:
                    self.state = 142
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
                if la_ == 1:
                    self.state = 145
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 148
                self.if_condition()
                self.state = 149
                self.match(PolicyParser.SINCE)
                self.state = 150
                self.then_condition()
                self.state = 152
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
                if la_ == 1:
                    self.state = 151
                    self.match(PolicyParser.CLOSED_PAREN)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.match(PolicyParser.YESTERDAY)
                self.state = 155
                self.then_condition()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 156
                self.match(PolicyParser.NOT)
                self.state = 158
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,27,self._ctx)
                if la_ == 1:
                    self.state = 157
                    self.match(PolicyParser.OPEN_PAREN)


                self.state = 160
                self.then_condition()
                self.state = 162
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,28,self._ctx)
                if la_ == 1:
                    self.state = 161
                    self.match(PolicyParser.CLOSED_PAREN)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term_factor(self):
            return self.getTypedRuleContext(PolicyParser.Term_factorContext,0)


        def term(self):
            return self.getTypedRuleContext(PolicyParser.TermContext,0)


        def ARITHMATIC_OP(self):
            return self.getToken(PolicyParser.ARITHMATIC_OP, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PolicyParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.term_factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,30,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PolicyParser.TermContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 169
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 170
                    self.match(PolicyParser.ARITHMATIC_OP)
                    self.state = 171
                    self.term_factor() 
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,30,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Term_factorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition_assigned_variable(self):
            return self.getTypedRuleContext(PolicyParser.Condition_assigned_variableContext,0)


        def device(self):
            return self.getTypedRuleContext(PolicyParser.DeviceContext,0)


        def device_attribute(self):
            return self.getTypedRuleContext(PolicyParser.Device_attributeContext,0)


        def constant(self):
            return self.getTypedRuleContext(PolicyParser.ConstantContext,0)


        def function_call(self):
            return self.getTypedRuleContext(PolicyParser.Function_callContext,0)


        def getRuleIndex(self):
            return PolicyParser.RULE_term_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm_factor" ):
                listener.enterTerm_factor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm_factor" ):
                listener.exitTerm_factor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm_factor" ):
                return visitor.visitTerm_factor(self)
            else:
                return visitor.visitChildren(self)




    def term_factor(self):

        localctx = PolicyParser.Term_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_term_factor)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,31,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.condition_assigned_variable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.device()
                self.state = 179
                self.match(PolicyParser.T__0)
                self.state = 180
                self.device_attribute()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.constant()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 183
                self.function_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(PolicyParser.FunctionContext,0)


        def OPEN_PAREN(self):
            return self.getToken(PolicyParser.OPEN_PAREN, 0)

        def terms(self):
            return self.getTypedRuleContext(PolicyParser.TermsContext,0)


        def CLOSED_PAREN(self):
            return self.getToken(PolicyParser.CLOSED_PAREN, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = PolicyParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.function()
            self.state = 187
            self.match(PolicyParser.OPEN_PAREN)
            self.state = 188
            self.terms()
            self.state = 189
            self.match(PolicyParser.CLOSED_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term_factor(self):
            return self.getTypedRuleContext(PolicyParser.Term_factorContext,0)


        def COMMA(self):
            return self.getToken(PolicyParser.COMMA, 0)
